# ATLAS

./: .gitignore  README.md  Untitled-2026-03-15-1421.excalidraw  app.py  main.py  pyproject.toml
Brain/: RAG.py  RTC.py  deepagent.py  subagents.py
Database/: prompts.py
Tools/: __init__.py  image_crawler.py  tavily.py
docs/: image_widget_documentation.md
frontend/: gemini-client.js  imageWidget.css  imageWidget.js  index.html  main.js  media-handler.js  package-lock.json  package.json  preload.js  renderer.js  sphere.css  sphere.js
